(lang dune 3.6)

(name plumblist)

(version 0.1.0)

(generate_opam_files true)

(source
 (github hasnep/plumblist))

(authors "Hannes <h@nnes.dev>")

(maintainers "Hannes <h@nnes.dev>")

(license AGPL-3.0-only)

(package
 (name plumblist)
 (synopsis "")
 (description "")
 (depends ocaml dune dune-build-info))
